--- a/index.html
+++ b/index.html
@@ -592,12 +592,13 @@
           <h2>Invited Talks</h2>
           <div style="line-height:25px">
           <p></p>
-              <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2" target=“_blank”>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence, the Hong Kong University of Science and Technology (Guangzhou) </EM>, China, 2024 <br></li>
-              <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, Xiamen University</EM>, China, 2024 <br></li>
+          <li> <stronghuge><STRONG>"Exploring Skeleton-Based AI Models for Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> Department of Computer Science and Technology, <u>Nanjing University</u> </EM>, China, 2024 <br></li>
+              <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2" target=“_blank”>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence Thrust, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China, 2024 <br></li>
+              <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China, 2024 <br></li>
             <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
                               Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>, 2023</stronghuge><br></li>
-              <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited by <EM>the Department of Computer Science and Engineering, Southern University of Science and Technology</EM>, China, 2021</stronghuge><br></li>
+              <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited by <EM>the Department of Computer Science and Engineering, <u>Southern University of Science and Technology</u></EM>, China, 2021</stronghuge><br></li>
               <p></p>
           </li></div>
         </td>
