--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
       <p>
       </p>
       <li> Editorial Board Member of Frontiers in Computational Neurosciencer</li>
-      <li> Program Committee (PC) Member of <EM>IJCAI</EM> 2022, 2023, 2024 <br></li>
+      <li> Program Committee (PC) Member of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
       <li> Co-Organizer and PC Member of
           <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
       <li> Co-Organizer and PC Member of
