--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 </p>
 
 <p>
-      Prior to joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
-      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
+      Prior to joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science.
+      <!-- where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>). -->
       I obtained my B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
@@ -161,27 +161,6 @@
     </div>
       </tr>
 </tbody>
-
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
-      <tr><td align="center" width="25%">
-        <img src="./images/Locality_Awareness_overview.png" width="190" height="110">
-      </td>
-      <td valign="top" width="75%">
-	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
-	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
-     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
-		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
-          <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
-         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
-         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
-<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
-          <br>
-        <p></p>
-      </td>
-    </tr>
-   </tbody></table>
 
 
    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
@@ -372,6 +351,7 @@
     </tr>
    </tbody></table>
 
+   
 
   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
@@ -392,6 +372,33 @@
       </td>
     </tr>
    </tbody></table>
+
+
+
+   
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
+      <tr><td align="center" width="25%">
+        <img src="./images/Locality_Awareness_overview.png" width="190" height="110">
+      </td>
+      <td valign="top" width="75%">
+	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
+	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
+     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
+     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
+		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
+          <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
+         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
+         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
+          <br>
+        <p></p>
+      </td>
+    </tr>
+   </tbody></table>
+
+
+
 
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
@@ -517,7 +524,7 @@
       <div style="line-height:25px">
       <p>
       </p>
-      <li> Editorial Board Member of Frontiers in Computational Neurosciencer</li>
+      <li> Editorial Board Member of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
       <li> Program Committee (PC) Member of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
       <li> Co-Organizer and PC Member of
           <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
@@ -554,18 +561,18 @@
           <h2>Selective Projects &amp; Awards &amp; Honors </h2>
           <div style="line-height:25px">
           <p></p>
-              <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 4 general programs of National Natural Science Foundation of China. (2018 to 2021)</li>
+              <!-- <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 4 general programs of National Natural Science Foundation of China. (2018 to 2021)</li> -->
           <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
             <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li>
               <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Shenzhen Sustainable Development of Science and Technology Project (2021): <EM>“Clinical Application and Research on Gait and Multi-Modal Analysis Based Elderly Fall and Protection System”.</EM></li>
                 <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
-              <br>
+              <!-- <br>
               The developed 4D Depth Video Based Gait Recognition & Emotion Prediction System and the Swarm Intelligence Computing and Multi-Sensor Based Sleep Monitoring System 
               have been applied to various universities and
               hospitals with more than 10,000 clinical experiments, including: 
               State Key Laboratory of Cognitive Neuroscience and Learning of Beijing Normal University, Peking University Sixth Hospital, 
               the Second Xiangya Hospital, Shenzhen People’s Hospital, etc.
-              <br>
+              <br> -->
               <br>
               <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
               <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
@@ -673,8 +680,8 @@
               <strong>Running and Working Out</strong>: I enjoy running and often participate in 10km+ level races including Singapore Marathon 2023.
               I regularly work out in the gym.
               <br>
-               <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school.
-              <br>
+               <!-- <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school. -->
+              <!-- <br> -->
               <strong>Billiards, Archery, Rock Climbing, Texas Hold'em</strong>
               <p></p>
           </li></div>
