--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
           <p></p>
               <!-- <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 4 general programs of National Natural Science Foundation of China. (2018 to 2021)</li> -->
           <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
-            <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li>
+            <!-- <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li> -->
               <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Shenzhen Sustainable Development of Science and Technology Project (2021): <EM>“Clinical Application and Research on Gait and Multi-Modal Analysis Based Elderly Fall and Protection System”.</EM></li>
                 <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
               <!-- <br>
