--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+          <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper  "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is accepted by <em><u>Neurocomputing 2025</u></em>!</smalll><br></li>
           <li> <strongsmall>[2024/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2025</u></em>!</smalll><br></li>
-         <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
-            "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is released!</smalll><br></li>
+         <!-- <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
+            "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is released!</smalll><br></li> -->
           <li> <strongsmall>[2024/03]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing the
               <EM><a href="https://ijcai-aiaa-2024.org/" target=“_blank”>The 4th AI for Ageless Aging Workshop (AIAA) workshop</a></EM>,
            conjunction with
@@ -162,6 +163,28 @@
       </tr>
 </tbody>
 
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
+    <td align="center" width="25%">
+      <img src="./images/AI4NDD_overview.png" width="190" height="130">
+    </td>
+    <td valign="top" width="75%">
+    <strong>A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis</strong><br>
+     By <strong><u>Haocong Rao</a></u></strong>,
+     <a href="">Minlin Zeng</a>,
+        <a href="https://scholar.google.com/citations?user=gcXa1o8AAAAJ&hl=en">Xuejiao Zhao</a>,
+     <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
+
+ <em>Neurocomputing, 2025</em><br>
+   <a href="https://arxiv.org/abs/2405.13082">[Link]</a>
+        <a href="https://arxiv.org/pdf/2405.13082">[PDF]</a>
+   <a href="https://github.com/Kali-Hac/AI4NDD-Survey">[Resources]</a>
+<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:pyQiJYbu3PgJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGam3o:AFWwaeYAAAAAZmGcg3p1n0naJ3OA-ZyEzQ3rhZc&scisig=AFWwaeYAAAAAZmGcgwd3gxarwEQ8c5xugpkq5jY&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
+      <p></p>
+    </td>
+  </tr>
+ </tbody></table>
+
 
    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
@@ -183,28 +206,6 @@
       </tr>
     </tbody></table>
 
-
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-    <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
-      <td align="center" width="25%">
-        <img src="./images/AI4NDD_overview.png" width="190" height="130">
-      </td>
-      <td valign="top" width="75%">
-      <strong>A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis</strong><br>
-       By <strong><u>Haocong Rao</a></u></strong>,
-       <a href="">Minlin Zeng</a>,
-          <a href="https://scholar.google.com/citations?user=gcXa1o8AAAAJ&hl=en">Xuejiao Zhao</a>,
-       <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-
-	 <em>Arxiv Preprint, 2024</em><br>
-     <a href="https://arxiv.org/abs/2405.13082">[Link]</a>
-          <a href="https://arxiv.org/pdf/2405.13082">[PDF]</a>
-     <a href="https://github.com/Kali-Hac/AI4NDD-Survey">[Resources]</a>
-<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:pyQiJYbu3PgJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGam3o:AFWwaeYAAAAAZmGcg3p1n0naJ3OA-ZyEzQ3rhZc&scisig=AFWwaeYAAAAAZmGcgwd3gxarwEQ8c5xugpkq5jY&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
-        <p></p>
-      </td>
-    </tr>
-   </tbody></table>
 
  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
