--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
-          <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper  "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is accepted by <em><u>Neurocomputing 2025</u></em>!</smalll><br></li>
+          <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper  "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is accepted by <em><u>Neurocomputing</u> [IF: 5.5]</em>!</smalll><br></li>
           <li> <strongsmall>[2024/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2025</u></em>!</smalll><br></li>
          <!-- <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
             "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is released!</smalll><br></li> -->
@@ -175,7 +175,7 @@
         <a href="https://scholar.google.com/citations?user=gcXa1o8AAAAJ&hl=en">Xuejiao Zhao</a>,
      <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
 
- <em>Neurocomputing, 2025</em><br>
+ <em>Neurocomputing 2025 [IF: 5.5]</em><br>
    <a href="https://arxiv.org/abs/2405.13082">[Link]</a>
         <a href="https://arxiv.org/pdf/2405.13082">[PDF]</a>
    <a href="https://github.com/Kali-Hac/AI4NDD-Survey">[Resources]</a>
