--- a/index.html
+++ b/index.html
@@ -101,13 +101,17 @@
  I am Haocong Rao (饶浩聪), a final-year PhD candidate supported by
    <a href="https://aisingapore.org/research/phd-fellowship-programme/" target=“_blank”>AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084" target=“_blank”>Prof. Chunyan Miao</a> (<em>FIEEE, Fellow of the Academy of Engineering Singapore</em>) and <a href="https://ece.ubc.ca/cyril-leung/" target=“_blank”>Prof. Cyril Leung</a> (<em>Fellow of the Engineering Institute of Canada</em>),
     at the <a href="https://www.ntu.edu.sg/lily" target=“_blank”>LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
-    My broad research interests include Skeleton-Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
-</p>
+    My broad research interests include 3D Skeleton Based Person Re-Identification (SRID), 3D Signal Processing, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
 
 <p>
       Prior to joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science.
-      <!-- where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>). -->
+      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm" target=“_blank”>Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm" target=“_blank”>Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN" target=“_blank”>Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/" target=“_blank”>Prof. Victor C.M. Leung</a> (<em>FIEEE, FRSC, FEIC, FCAE</em>).
       I obtained my B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
+</p>
+
+<p>
+  In 2020, our team initiated  <a href="https://arxiv.org/pdf/2401.15296">the <em>first</em> series </a> of deep learning based SRID research, 
+  with a focus on developing more efficient, safer (<em>e.g.</em>, appearance-privacy-protected), and robust human identification algorithms tailored for resource-constraint applications and advanced 3D spatial intelligence.
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
 </strong>
@@ -115,6 +119,7 @@
         <td width="100%" valign="middle">
         <h2>News</h2>
         <p>
+          <li> <strongsmall>[2025/02]</strongsmall> &nbsp;&nbsp;<smalll>Our survey paper "Recognizing Identities From Human Skeletons: A Survey on 3D Skeleton Based Person Re-Identification" is updated and released!</smalll><br></li>
           <li> <strongsmall>[2025/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper  "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is accepted by <em><u>Neurocomputing</u> [IF: 5.5]</em>!</smalll><br></li>
           <li> <strongsmall>[2024/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em><u>AAAI 2025</u></em>!</smalll><br></li>
          <!-- <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
@@ -124,8 +129,6 @@
            conjunction with
               <EM><a href="https://ijcai24.org/" target=“_blank”>IJCAI 2024</a></EM>, now calling for papers!
          </smalll><br></li>
-            <li> <strongsmall>[2024/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper "A Survey on 3D Skeleton Based Person Re-Identification: Approaches, Designs,
-                Challenges, and Future Directions" is released!</smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper (LLMs for Psychology) is accepted by <em>Findings of <u>EMNLP 2023</u></em>!</smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Outstanding Contribution Award</strong> of <em>European Alliance for Innovation
 (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</em>.</smalll><br></li>
@@ -162,6 +165,30 @@
     </div>
       </tr>
 </tbody>
+
+
+   
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
+      <tr><td align="center" width="25%">
+        <img src="./images/Locality_Awareness_overview.png" width="190" height="110">
+      </td>
+      <td valign="top" width="75%">
+	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
+	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
+     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
+     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
+		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
+          <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
+         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
+         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
+          <br>
+        <p></p>
+      </td>
+    </tr>
+   </tbody></table>
+
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
@@ -210,14 +237,14 @@
  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
       <td align="center" width="25%">
-        <img src="./images/SRID_overview.jpeg" width="190" height="150">
+        <img src="./images/SRID_overview.jpeg" width="190" height="100">
       </td>
       <td valign="top" width="75%">
-      <strong>A Survey on 3D Skeleton Based Person Re-Identification: Approaches, Designs, Challenges, and Future Directions</strong><br>
+      <strong>Recognizing Identities From Human Skeletons: A Survey on 3D Skeleton Based Person Re-Identification</strong><br>
        By <strong><u>Haocong Rao</a></u></strong>,
        <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
 
-          <em>Arxiv Preprint, 2024</em><font color="#6495ed"> [First SRID Survey]</font><br>
+          <em>Arxiv Preprint, 2025</em><font color="#6495ed"> [First SRID Survey]</font><br>
      <a href="https://arxiv.org/abs/2401.15296">[Link]</a>
            <a href="https://arxiv.org/pdf/2401.15296">[PDF]</a>
      <a href="https://github.com/Kali-Hac/3D-skeleton-based-person-re-ID-survey">[Resources]</a>
@@ -237,7 +264,7 @@
        By <strong><u>Haocong Rao</u></strong>,
            <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Cyril Leung</a>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-          <em>International Journal of Computer Vision (<strong>IJCV</strong>) 2023 [IF: 19.5]</em> <font color="#6495ed">[First SRID Article in IJCV]</font><br>
+          <em>International Journal of Computer Vision (<strong>IJCV</strong>) 2024 [IF: 19.5]</em> <font color="#6495ed">[First SRID Article in IJCV]</font><br>
      <a href="https://arxiv.org/pdf/2307.12917">[Link]</a>
           <a href="https://drive.google.com/file/d/1Z6LBFjyPlbUtFoQ1xsuGerpfwuZo8D7m/view?usp=drive_link">[PDF]</a>
      <a href="https://github.com/Kali-Hac/Hi-MPC">[Code]</a>
@@ -376,29 +403,6 @@
 
 
 
-   
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
-      <tr><td align="center" width="25%">
-        <img src="./images/Locality_Awareness_overview.png" width="190" height="110">
-      </td>
-      <td valign="top" width="75%">
-	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
-	 By <strong><u>Haocong Rao</u>*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
-     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
-		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
-          <a href="https://drive.google.com/file/d/1uIu2QmKYt68YSenPmuBAFBULpH2mekpC/view?usp=drive_link">[PDF]</a>
-         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
-         <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
-<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
-          <br>
-        <p></p>
-      </td>
-    </tr>
-   </tbody></table>
-
-
 
 
 
@@ -525,8 +529,8 @@
       <div style="line-height:25px">
       <p>
       </p>
-      <li> Editorial Board Member of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
       <li> Program Committee (PC) Member of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
+      <li> Editorial Board Member of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
       <li> Co-Organizer and PC Member of
           <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
       <li> Co-Organizer and PC Member of
@@ -543,6 +547,7 @@
           <li> IEEE Transactions on Industrial Informatics (TII), Reviewer </li>
            <li> IEEE Transactions on Affective Computing (TAC), Reviewer </li>
           <li> IEEE Journal of Biomedical and Health Informatics (JBHI), Reviewer </li>
+          <li> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), Reviewer </li>
            <li> IEEE Transactions on Multimedia (TMM), Reviewer </li>
            <li> Artificial Intelligence Review, Reviewer </li>
            <li> Expert Systems with Applications, Reviewer </li>
@@ -562,18 +567,18 @@
           <h2>Selective Projects &amp; Awards &amp; Honors </h2>
           <div style="line-height:25px">
           <p></p>
-              <!-- <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 4 general programs of National Natural Science Foundation of China. (2018 to 2021)</li> -->
+              <li> <stronghuge><STRONG><u>Participator</u></STRONG> of 1 National Key Research and Development Program of China, and 4 general programs of National Natural Science Foundation of China. (2018 to 2021)</li>
           <li> <stronghuge><STRONG><u>Project Lead</u></STRONG> of AI Singapore PhD Research Project (of National Research Foundation, Singapore) (2022 to 2025): <EM>“Research and Application of AI for Skeleton-Based Person Re-Identification”</EM></li>
-            <!-- <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li> -->
+            <li> <stronghuge><STRONG><u>Participator</u></STRONG> of the National Science and Technology Innovation Project (2018 to 2020): <EM>“Research and Development of Non-Invasive Gait * System”.</EM></li>
               <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Shenzhen Sustainable Development of Science and Technology Project (2021): <EM>“Clinical Application and Research on Gait and Multi-Modal Analysis Based Elderly Fall and Protection System”.</EM></li>
                 <li> <stronghuge><STRONG><u>Participator</u></STRONG> of Alibaba-NTU Joint Research Institute Project (2022 to 2025)</li>
-              <!-- <br>
+              <br>
               The developed 4D Depth Video Based Gait Recognition & Emotion Prediction System and the Swarm Intelligence Computing and Multi-Sensor Based Sleep Monitoring System 
               have been applied to various universities and
               hospitals with more than 10,000 clinical experiments, including: 
               State Key Laboratory of Cognitive Neuroscience and Learning of Beijing Normal University, Peking University Sixth Hospital, 
               the Second Xiangya Hospital, Shenzhen People’s Hospital, etc.
-              <br> -->
+              <br>
               <br>
               <li> <stronghuge><STRONG>Outstanding Contribution Award</STRONG>, European Alliance for Innovation (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness, 2023 </stronghuge><br></li>
               <li> <STRONG>Outstanding Reviewer</STRONG> of IJCAI (Top 3% Reviewer), 2022<br></li>
@@ -600,13 +605,13 @@
           <h2>Invited Talks</h2>
           <div style="line-height:25px">
           <p></p>
-          <li> <stronghuge><STRONG>"Exploring Skeleton-Based AI Models for Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> Department of Computer Science and Technology, <u>Nanjing University</u> </EM>, China, 2024 <br></li>
-              <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2" target=“_blank”>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence Thrust, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China, 2024 <br></li>
-              <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China, 2024 <br></li>
-            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore, 2024 <br></li>
+          <li> <stronghuge><STRONG>"Exploring Skeleton-Based AI Models for Person Re-Identification and Interdisciplinary Research"</STRONG>, Invited by <EM> Department of Computer Science and Technology, <u>Nanjing University</u> </EM>, China<br></li>
+              <li> <stronghuge><STRONG><a href="https://youtu.be/1QcU5oobJxM?si=eFTmGs7nPn6ilcK2" target=“_blank”>"Advancing Skeleton-Based AI Innovations in Person Re-Identification and Beyond"</STRONG></a>, Invited by <EM> Information Hub - Artificial Intelligence Thrust, <u>Hong Kong University of Science and Technology (Guangzhou)</u> </EM>, China<br></li>
+              <li> <stronghuge><STRONG>"Pioneering AI Innovations in Skeleton-Based Person Re-Identification"</STRONG>, Invited by <EM>Institute of Artificial Intelligence, <u>Xiamen University</u></EM>, China<br></li>
+            <li> <stronghuge><STRONG>"Discussion and Advice on  <a href="https://www.smartnation.gov.sg/nais/" target=“_blank”>the National AI Stragtegy 2.0</a>"</STRONG>, Invited by <EM>AI Singapore Committee (of Singapore National Research Foundation)</EM>, NUS, Singapore<br></li>
               <li> <stronghuge><STRONG>"Skeleton Prototype Contrastive Learning with Multi-Level Graph Relation Modeling for Unsupervised Person Re-Identification"</STRONG>, 
-                              Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>, 2023</stronghuge><br></li>
-              <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited by <EM>the Department of Computer Science and Engineering, <u>Southern University of Science and Technology</u></EM>, China, 2021</stronghuge><br></li>
+                              Invited by <EM>International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</EM>.</stronghuge><br></li>
+              <li> <stronghuge><STRONG>"Insights from Top-Conference Research"</STRONG>, Invited by <EM>the Department of Computer Science and Engineering, <u>Southern University of Science and Technology</u></EM>, China</stronghuge><br></li>
               <p></p>
           </li></div>
         </td>
