--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
     </td>
     <td valign="top" width="75%">
     <strong>A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis</strong><br>
-     By <strong><u>Haocong Rao</a></u></strong>,
-     <a href="">Minlin Zeng</a>,
+     By <strong><u>Haocong Rao</u>*</strong>,
+     Minlin Zeng*,
         <a href="https://scholar.google.com/citations?user=gcXa1o8AAAAJ&hl=en">Xuejiao Zhao</a>,
-     <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
+     <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a> (* Co-First Author)<br>
 
  <em>Neurocomputing 2025 [IF: 5.5]</em><br>
    <a href="https://arxiv.org/abs/2405.13082">[Link]</a>
