--- a/index.html
+++ b/index.html
@@ -526,8 +526,9 @@
       <div style="line-height:25px">
       <p>
       </p>
-      <li> Program Committee (PC) Member of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
-      <li> Editorial Board Member of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
+      <li> <STRONG>Publication Chair</STRONG> of <a href="http://www.cloudcom2025.org/index">the 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025 </EM><br></li>
+      <li> <STRONG>Program Committee (PC) Member </STRONG> of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
+      <li> <STRONG>Editorial Board Member </STRONG> of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
       <li> Co-Organizer and PC Member of
           <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
       <li> Co-Organizer and PC Member of
