--- a/index.html
+++ b/index.html
@@ -541,12 +541,14 @@
           <li> Nature Communications, Reviewer </li>
            <li> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), Reviewer </li>
            <li> International Journal of Computer Vision (IJCV), Reviewer </li>
+           <li> Pattern Recognition (PR), Reviewer </li>
+           <li> IEEE Transactions on Multimedia (TMM), Reviewer </li>
+           <li> IEEE Journal of Biomedical and Health Informatics (JBHI), Reviewer </li>
+           <li> IEEE Internet of Things Journal (IoTJ), Reviewer </li>
+           <li> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), Reviewer </li>
            <li> IEEE Transactions on Image Processing (TIP), Reviewer</li>
           <li> IEEE Transactions on Industrial Informatics (TII), Reviewer </li>
            <li> IEEE Transactions on Affective Computing (TAC), Reviewer </li>
-          <li> IEEE Journal of Biomedical and Health Informatics (JBHI), Reviewer </li>
-          <li> IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), Reviewer </li>
-           <li> IEEE Transactions on Multimedia (TMM), Reviewer </li>
            <li> Artificial Intelligence Review, Reviewer </li>
            <li> Expert Systems with Applications, Reviewer </li>
 <!--          <li> "xxx", AI Time, 2021.10 &nbsp;<a href="https://www.bilibili.com/video/BV1qP4y1b7us?spm_id_from=333.999.0.0">[Video]</a><br></li>-->
