--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
       <div style="line-height:25px">
       <p>
       </p>
-      <li> <STRONG>Publication Chair</STRONG> of <a href="http://www.cloudcom2025.org/index">the 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025 </EM><br></li>
+      <li> <STRONG>Organizing Committee Member (Chairs)</STRONG> of <a href="http://www.cloudcom2025.org/index">the 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025 </EM><br></li>
       <li> <STRONG>Program Committee (PC) Member </STRONG> of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
       <li> <STRONG>Editorial Board Member </STRONG> of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
       <li> Co-Organizer and PC Member of
