--- a/index.html
+++ b/index.html
@@ -529,13 +529,13 @@
       <li> <STRONG>Organizing Committee (Publication Chair)</STRONG> of <a href="http://www.cloudcom2025.org/index">the 16th IEEE International Conference on Cloud Computing Technology and Science </a> @<EM>IEEE CloudCom 2025 </EM><br></li>
       <li> <STRONG>Program Committee (PC) Member </STRONG> of <EM>IJCAI</EM> 2025, <EM>IJCAI</EM> 2024, <EM>IJCAI</EM> 2023, <EM>IJCAI</EM> 2022 <br></li>
       <li> <STRONG>Editorial Board Member </STRONG> of <EM>Frontiers in Computational Neuroscience</EM> journal</li>
-      <li> Co-Organizer and PC Member of
+      <li> Co-Organizer/Cooperator and PC Member of
           <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
-      <li> Co-Organizer and PC Member of
+      <li> Co-Organizer/Cooperator and PC Member of
           <a href="https://zxjwudi.github.io/aiaa2023.github.io/">the 3rd AI for Ageless Aging Workshop</a> @<EM>IJCAI 2023</EM><br></li>
       <li> Organizing Team Member of
           <a href="http://iccse2023.crowdscience.org/">the 6th International Conference on Crowd Science and Engineering</a> @<EM>ICCSE 2023</EM><br></li>
-      <li> Co-Host, Co-Organizer, and PC Member of
+      <li> Co-Host, Co-Organizer/Cooperator, and PC Member of
           <a href="https://zxjwudi.github.io/aif2022.github.io/">the 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
           <br>
           <li> Nature Communications, Reviewer </li>
